--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -1,3 +1,9 @@
+/*
+  Author: Sarvarbek Usmonov
+  File: styles.css
+  Purpose: Styles file
+  Date March 20, 2023
+*/
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -11,26 +17,32 @@ body {
   flex-grow: 1;
   overflow-y: auto;
   padding: 20px;
-  background-color: #f0f0f0;
+  background-color: lightgreen;
 }
 
 #input-area {
-  padding: 20px;
-  background-color: #eee;
-  display: flex;
+  padding: 30px;
+  background-color: green;
+/*  display: flex;*/
 }
 
 input[type="text"] {
   flex-grow: 1;
   margin-right: 10px;
+  width: 30%;
   padding: 10px;
   border: 1px solid #ccc;
 }
 
 button {
-  padding: 10px 20px;
+  padding: 10px;
   border: none;
   background-color: #007bff;
   color: #fff;
   cursor: pointer;
+}
+
+label {
+  color: lightgrey;
+  margin: 10px 10px;
 }
